--- a/django/blog/BlogApp/templates/login.html
+++ b/django/blog/BlogApp/templates/login.html
@@ -1,6 +1,15 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="pt-br">
+{%load allauth%}
+{% load i18n %}
 {% load static %}
-{% block title %}Login{% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}LOGIN WITH GOOGLE {% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
+</head>
+
 
 {% block content %}
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
@@ -16,7 +25,7 @@
         </div>
 
         <div class="col-md-6 right-box">
-            <h1 class='mb-3' style='justify-content:center'>Login</h1>
+            <h1 class='text-center mb-3' style="">Login</h1>
             <form method="POST" action="{% url 'login' %}">
                 {% csrf_token %}
                 <div class="mb-3">
@@ -25,26 +34,33 @@
                 <div class="mb-3">
                     <input type="password" name="password" class="form-control form-control-lg" placeholder="Senha" required>
                 </div>
+                <div class="d-grid gap-2">
+                    <button class="btn btn-dark" type="submit">Entrar</button>
+                </div>
                 <div class="d-flex justify-content-between mb-3">
                     <div class="form-check">
                         <input type="checkbox" name="remember" class="form-check-input" id="formcheck">
                         <label for="formcheck" class="form-check-label"> Lembrar-me</label>
                     </div>
                     <div>
-                        <a href="{% url 'home' %}" class="text-dark">Esqueceu a senha?</a>
+                        <a href="{% url 'account_change_password' %}" class="text-dark">Esqueceu a senha?</a>
                     </div>
                 </div>
-                <div class="d-grid gap-2">
-                    <button class="btn btn-dark" type="submit">Login</button>
-                    <button class="btn btn-outline-dark" type="button">
-                        <img src="{% static 'media/img/google.png' %}" class="img-fluid" width="20px">
-                        Entrar com Google
-                    </button>
-                    <p class="text-center mb-1">Não tem uma conta?</p>
-                    <a class="text-center" href="{% url 'home' %}">Registre-se agora!</a>
-                </div>
+               
             </form>
+            <div class="d-grid gap-2">
+                {%csrf_token%}
+                {%load socialaccount %}
+                <a class="btn btn-outline-dark" href="/accounts/google/login/">
+                    <img src="{% static 'media/img/google.png' %}" class="img-fluid" width="20px">
+                    Entrar com Google
+                </a>
+                <p class="text-center mb-1">Não tem uma conta?</p>
+                <a class="text-center" href="{% url 'register' %}">Registre-se agora!</a>
+            </div>
         </div>
     </div>
 </div>
+
+<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 {% endblock %}
